import { Injectable, inject } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import { Observable } from 'rxjs';

import { environment } from '../../environments/environment';

export interface Order {
  id: number;
  orderNumber?: string;
  totalPrice?: number;
  totalAmount?: number;
  status?: string;
  shipmentStatus?: string;
  paymentMethod?: string;
  createdAt?: string;
  orderDate?: string;
  items?: OrderItem[];
}

export interface OrderItem {
  productId: number;
  productName: string;
  category?: string;
  quantity: number;
  price: number;
}

export interface CreateOrderRequest {
  productId: number;
  quantity: number;
  paymentMethod?: string;
}

export interface CheckoutItemRequest {
  productId: number;
  quantity: number;
}

export interface CheckoutRequest {
  items: CheckoutItemRequest[];
  paymentMethod?: string;
}

@Injectable({
  providedIn: 'root'
})
export class OrderService {
  private readonly http = inject(HttpClient);
  private readonly apiUrl = `${environment.apiBaseUrl}/orders`;

  getMyOrders(): Observable<Order[]> {
    return this.http.get<Order[]>(`${this.apiUrl}/my`);
  }

  getAllOrders(size = 100): Observable<Order[]> {
    const params = new HttpParams().set('size', size);
    return this.http.get<Order[]>(this.apiUrl, { params });
  }

  createOrder(payload: CreateOrderRequest): Observable<Order> {
    return this.http.post<Order>(this.apiUrl, payload);
  }

  checkout(payload: CheckoutRequest): Observable<Order> {
    return this.http.post<Order>(`${this.apiUrl}/checkout`, payload);
  }

  updateOrder(id: number, payload: Order): Observable<Order> {
    return this.http.put<Order>(`${this.apiUrl}/${id}`, payload);
  }

  deleteOrder(id: number): Observable<void> {
    return this.http.delete<void>(`${this.apiUrl}/${id}`);
  }
}
